<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <name>SQL Workbench/J</name>
  <modelVersion>4.0.0</modelVersion>
  <groupId>eu.sql-workbench</groupId>
  <artifactId>sqlworkbench</artifactId>
  <version>128-SNAPSHOT</version>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>ISO-8859-15</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <poi.version>5.2.1</poi.version>
    <log4j.version>2.17.2</log4j.version>
    <compiler.plugin.version>3.9.0</compiler.plugin.version>
    <surefire.plugin.version>2.22.2</surefire.plugin.version>
  </properties>

  <build>
    <finalName>sqlworkbench</finalName>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${compiler.plugin.version}</version>
        <configuration>
          <showDeprecation>false</showDeprecation>
          <useIncrementalCompilation>false</useIncrementalCompilation>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <sourceFileExcludes>
            <exclude>**/BorderLessWindowsTabbedPaneUI.java</exclude>
          </sourceFileExcludes>
        </configuration>
      </plugin>

    </plugins>

  </build>

  <profiles>
    <profile>
      <id>compile-windows</id>
      <activation>
        <os>
          <family>windows</family>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <showDeprecation>false</showDeprecation>
              <useIncrementalCompilation>false</useIncrementalCompilation>
              <debuglevel>lines,vars,source</debuglevel>
              <compilerArgs>
                <arg>-Xlint:none</arg>
                <arg>-g:source,lines</arg>
                <arg>--add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED</arg>
              </compilerArgs>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>compile-non-windows</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <showDeprecation>false</showDeprecation>
              <useIncrementalCompilation>false</useIncrementalCompilation>
              <excludes>
                <exclude>workbench/gui/components/BorderLessWindowsTabbedPaneUI.java</exclude>
              </excludes>
              <debuglevel>lines,vars,source</debuglevel>
              <compilerArgs>
                <arg>-Xlint:none</arg>
                <arg>-g:source,lines</arg>
              </compilerArgs>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>test-default</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${surefire.plugin.version}</version>
            <configuration>
              <excludedGroups>workbench.db.DbTest</excludedGroups>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>test-postgres</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${surefire.plugin.version}</version>
            <configuration>
              <includes>
                <includedGroups>workbench.db.PostgresDbTest</includedGroups>
                <include>workbench/db/postgres/**</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>test-oracle</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${surefire.plugin.version}</version>
            <configuration>
              <includes>
                <includedGroups>workbench.db.OracleDbTest</includedGroups>
                <include>workbench/db/oracle/**</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>test-mssql</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${surefire.plugin.version}</version>
            <configuration>
              <includes>
                <includedGroups>workbench.db.MsSQLTest</includedGroups>
                <include>workbench/db/mssql/**</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>test-mysql</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${surefire.plugin.version}</version>
            <configuration>
              <includes>
                <includedGroups>workbench.db.MySQLTest</includedGroups>
                <include>workbench/db/mysql/**</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>test-firebird</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${surefire.plugin.version}</version>
            <configuration>
              <includes>
                <includedGroups>workbench.db.FirebirdDbTest</includedGroups>
                <include>workbench/db/firebird/**</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>test-db2</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${surefire.plugin.version}</version>
            <configuration>
              <includes>
                <includedGroups>workbench.db.IbmDb2Test</includedGroups>
                <include>workbench/db/ibm/**</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

  </profiles>

  <dependencies>

    <dependency>
      <groupId>com.github.mwiede</groupId>
      <artifactId>jsch</artifactId>
      <version>0.2.2</version>
    </dependency>

    <dependency>
      <groupId>net.java.dev.jna</groupId>
      <artifactId>jna-platform</artifactId>
      <version>5.8.0</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf</artifactId>
      <version>2.4</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>${poi.version}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>${poi.version}</version>
      <scope>compile</scope>
      <exclusions>
        <exclusion>
          <groupId>com.github.virtuald</groupId>
          <artifactId>curvesapi</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>${log4j.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j.version}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.odftoolkit</groupId>
      <artifactId>simple-odf</artifactId>
      <version>0.9.0</version>
      <classifier>jar-with-dependencies</classifier>
      <scope>compile</scope>
      <exclusions>
        <exclusion>
          <groupId>org.apache.odftoolkit</groupId>
          <artifactId>taglets</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.odftoolkit</groupId>
          <artifactId>odfdom-java</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-validator</groupId>
          <artifactId>commons-validator</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-beanutils</groupId>
          <artifactId>commons-beanutils</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-digester</groupId>
          <artifactId>commons-digester</artifactId>
        </exclusion>
        <exclusion>
          <groupId>xerces</groupId>
          <artifactId>xercesImpl</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.dbunit</groupId>
      <artifactId>dbunit</artifactId>
      <version>2.5.4</version>
      <scope>compile</scope>
      <exclusions>
        <exclusion>
          <groupId>commons-collections</groupId>
          <artifactId>commons-collections</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

    <!-- JDBC driver for unit tests -->
    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>2.6.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <version>2.1.210</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.firebirdsql.jdbc</groupId>
      <artifactId>jaybird</artifactId>
      <version>4.0.5.java11</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>8.0.27</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>com.google.protobuf</groupId>
          <artifactId>protobuf-java</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>com.oracle.ojdbc</groupId>
      <artifactId>ojdbc8</artifactId>
      <version>19.3.0.0</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>com.oracle.ojdbc</groupId>
          <artifactId>ons</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.oracle.ojdbc</groupId>
          <artifactId>oraclepki</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.oracle.ojdbc</groupId>
          <artifactId>osdt_cert</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.oracle.ojdbc</groupId>
          <artifactId>osdt_core</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.oracle.ojdbc</groupId>
          <artifactId>simplefan</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.2.20</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>org.checkerframework</groupId>
          <artifactId>checker-qual</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>com.ibm.db2.jcc</groupId>
      <artifactId>db2jcc</artifactId>
      <version>db2jcc4</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.microsoft.sqlserver</groupId>
      <artifactId>mssql-jdbc</artifactId>
      <version>9.2.1.jre11</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.derby</groupId>
      <artifactId>derby</artifactId>
      <version>10.11.1.1</version>
      <scope>test</scope>
    </dependency>

  </dependencies>
</project>